--- a/src/Introduction/_Introduction.scss
+++ b/src/Introduction/_Introduction.scss
@@ -51,8 +51,7 @@ $base-class: introduction;
   }
 
   &__background-image {
-    position: relative;
-    bottom: 70px;
+    margin-top: -70px;
     z-index: -1000;
   }
 
@@ -78,8 +77,7 @@ $base-class: introduction;
     }
 
     &__background-image {
-      position: relative;
-      bottom: 90px;
+      margin-top: -90px;
       z-index: -1000;
     }
   }
@@ -133,8 +131,7 @@ $base-class: introduction;
     }
 
     &__background-image {
-      position: relative;
-      bottom: 50px;
+      margin-top: -50px;
       z-index: -1000;
 
       display: flex;
