--- a/src/Skills/_Skills.scss
+++ b/src/Skills/_Skills.scss
@@ -7,7 +7,7 @@ $base-class: skills;
 .#{$base-class} {
   &__container {
     font-family: 'eurostile', sans-serif;
-    max-width: 1024px;
+    max-width: calc(100% - 80px);
 
     margin: auto;
 
@@ -66,9 +66,19 @@ $base-class: skills;
   }
 
   @media only screen and (min-width: 481px) and (max-width: 768px) {
+    &__container {
+      font-family: 'eurostile', sans-serif;
+      max-width: calc(100% - 40px);
+
+      margin: auto;
+
+      display: flex;
+      justify-content: center;
+    }
+
     &__main {
       display: block;
-      width: calc(100% - 40px);
+      width: 100%;
     }
 
     &__parts {
@@ -117,9 +127,19 @@ $base-class: skills;
   }
 
   @media only screen and (max-width: 480px) {
+    &__container {
+      font-family: 'eurostile', sans-serif;
+      max-width: calc(100% - 40px);
+
+      margin: auto;
+
+      display: flex;
+      justify-content: center;
+    }
+
     &__main {
       display: block;
-      width: calc(100% - 40px);
+      width: 100%;
     }
 
     &__parts {
