--- a/src/Introduction/_Introduction.scss
+++ b/src/Introduction/_Introduction.scss
@@ -41,7 +41,7 @@ $base-class: introduction;
     font-size: 20px;
     font-weight: 600;
     color: #666666;
-    text-align: justify;
+    text-align: center;
   }
 
   &__proffession {
