--- a/src/Skills/_Skills.scss
+++ b/src/Skills/_Skills.scss
@@ -92,6 +92,16 @@ $base-class: skills;
     margin-top: 100px;
   }
 
+  &__exp {
+    font-family: 'eurostile', sans-serif;
+    width: 100%;
+    text-align: center;
+    color: #808080;
+    font-weight: 700;
+    font-size: 25px;
+    margin-top: 10px;
+  }
+
   @media only screen and (min-width: 481px) and (max-width: 768px) {
     &__container {
       font-family: 'eurostile', sans-serif;
@@ -172,6 +182,16 @@ $base-class: skills;
       font-weight: 700;
       font-size: 25px;
       margin-top: 50px;
+    }
+
+    &__exp {
+      font-family: 'eurostile', sans-serif;
+      width: 100%;
+      text-align: center;
+      color: #141c3a;
+      font-weight: 700;
+      font-size: 20px;
+      margin-top: 10px;
     }
   }
 
@@ -255,6 +275,16 @@ $base-class: skills;
       font-weight: 700;
       font-size: 25px;
       margin-top: 50px;
+    }
+
+    &__exp {
+      font-family: 'eurostile', sans-serif;
+      width: 100%;
+      text-align: center;
+      color: #141c3a;
+      font-weight: 700;
+      font-size: 20px;
+      margin-top: 10px;
     }
   }
 }
