--- a/src/ExperienceDropDown/_ExperienceDropDown.scss
+++ b/src/ExperienceDropDown/_ExperienceDropDown.scss
@@ -18,6 +18,9 @@ $base-class: experience-dropdown;
 
     .MuiButtonBase-root {
       background-color: #f5f5f5;
+      border-width: 1px 1px 0px 1px;
+      border-style: solid;
+      border-color: #d9d8d8;
     }
   }
 
