--- a/src/ExperienceDropDown/_ExperienceDropDown.scss
+++ b/src/ExperienceDropDown/_ExperienceDropDown.scss
@@ -88,6 +88,10 @@ $base-class: experience-dropdown;
     margin: 12px 0px;
   }
 
+  &__bold {
+    font-weight: 600;
+  }
+
   @media only screen and (min-width: 481px) and (max-width: 768px) {
     &__accordian-container {
       width: calc(100% - 40px);
