--- a/src/ExperienceDropDown/_ExperienceDropDown.scss
+++ b/src/ExperienceDropDown/_ExperienceDropDown.scss
@@ -32,7 +32,7 @@ $base-class: experience-dropdown;
     }
 
     div[class*='MuiAccordion-region'] {
-      background-color: #f6f9ff;
+      background-color: #ffffff;
       border: 1px solid #d9d8d8;
     }
   }
