--- a/src/ExperienceDropDown/_ExperienceDropDown.scss
+++ b/src/ExperienceDropDown/_ExperienceDropDown.scss
@@ -152,6 +152,12 @@ $base-class: experience-dropdown;
       font-size: 14px;
       line-height: 16px;
       margin: 12px 0px;
+      color: #141c3a;
+    }
+
+    &__check {
+      color: #05718c;
+      font-size: 16px;
     }
 
     &__journey {
