--- a/src/Projects/_Projects.scss
+++ b/src/Projects/_Projects.scss
@@ -11,11 +11,24 @@ $base-class: projects;
     margin: auto;
   }
 
+  &__rows {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   @media only screen and (min-width: 481px) and (max-width: 768px) {
     &__container {
       font-family: 'eurostile', sans-serif;
       width: 512px;
       margin: auto;
+    }
+
+    &__rows {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -24,6 +37,13 @@ $base-class: projects;
       font-family: 'eurostile', sans-serif;
       width: calc(100% - 40px);
       margin: auto;
+    }
+
+    &__rows {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
