--- a/src/InteractiveCards/_InteractiveCards.scss
+++ b/src/InteractiveCards/_InteractiveCards.scss
@@ -54,7 +54,7 @@ $base-class: interactive-cards;
   &__action-card:hover &__hover-variable {
     position: relative;
     opacity: 100;
-    background-color: #3b3e8c;
+    background-color: #141c3a;
     border-radius: 6px;
     transition-property: opacity, background-color;
     transition: 0.75s ease-in-out;
