--- a/src/Projects/_Projects.scss
+++ b/src/Projects/_Projects.scss
@@ -22,15 +22,13 @@ $base-class: projects;
     margin: 16px 8px 16px 8px;
   }
 
-  &__on-hover {
+  &__on-hover,
+  &__non-hover {
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-
-  &__on-hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
